objects/Registration_Colors__c.object
<CustomObject>
    <fields>
        <fullName>Border_color__c</fullName>
        <label>Border color</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Button_Color__c</fullName>
        <label>Button Color</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Border_color__c</fullName>
        <label>Event Border color</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Name_Color__c</fullName>
        <label>Event Name Color</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Registration Colors</relationshipLabel>
        <relationshipName>Registration_Colors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Header_color__c</fullName>
        <label>Header color</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>More_Info_color__c</fullName>
        <label>More Info color</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Color__c</fullName>
        <label>Text Color</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Registration Colors</label>
    <nameField>
        <label>Registration background color</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Registration Colors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>